--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     </header>
     <div id="game"></div>
     <footer></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/data/maze.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
