--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Projet 3 - Pacman</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
     <header>
         <h1 id="highScore">High Score <span>0</span></h1>
@@ -19,6 +21,8 @@
     <script src="js/model/Tile.js"></script>
     <script src="js/model/Dot.js"></script>
     <script src="js/model/Wall.js"></script>
+    <script src="js/model/Position.js"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
