--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/model/Dot.js"></script>
     <script src="js/model/Wall.js"></script>
     <script src="js/model/Position.js"></script>
+    <script src="js/model/Layer.js"></script>
     <script src="js/index.js"></script>
 </body>
 
