étape 1.7 : couches et labyrinthe

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="js/model/Wall.js"></script>
     <script src="js/model/Position.js"></script>
     <script src="js/model/Layer.js"></script>
+    <script src="js/model/Maze.js"></script>
     <script src="js/index.js"></script>
 </body>
 
