--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/data/maze.js"></script>
+    <script src="js/data/constants.js"></script>
     <script src="js/model/Tile.js"></script>
     <script src="js/model/Dot.js"></script>
     <script src="js/model/Wall.js"></script>
@@ -25,6 +26,7 @@
     <script src="js/model/Layer.js"></script>
     <script src="js/model/Maze.js"></script>
     <script src="js/model/Game.js"></script>
+    <script src="js/view/GameView.js"></script>
     <script src="js/index.js"></script>
 </body>
 
