--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="js/model/Maze.js"></script>
     <script src="js/model/Game.js"></script>
     <script src="js/view/GameView.js"></script>
+    <script src="js/controller/GameCtrl.js"></script>
     <script src="js/index.js"></script>
 </body>
 
