--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/data/maze.js"></script>
     <script src="js/data/constants.js"></script>
+    <script src="js/model/Component.js"></script>
     <script src="js/model/Tile.js"></script>
     <script src="js/model/Dot.js"></script>
     <script src="js/model/Wall.js"></script>
