--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/data/constants.js"></script>
     <script src="js/model/Component.js"></script>
     <script src="js/model/Direction.js"></script>
+    <script src="js/model/Sprite.js"></script>
     <script src="js/model/Tile.js"></script>
     <script src="js/model/Dot.js"></script>
     <script src="js/model/Wall.js"></script>
