--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/model/Component.js"></script>
     <script src="js/model/Direction.js"></script>
     <script src="js/model/Sprite.js"></script>
+    <script src="js/model/Pacman.js"></script>
     <script src="js/model/Tile.js"></script>
     <script src="js/model/Dot.js"></script>
     <script src="js/model/Wall.js"></script>
@@ -30,7 +31,9 @@
     <script src="js/model/Maze.js"></script>
     <script src="js/model/Game.js"></script>
     <script src="js/view/GameView.js"></script>
+    <script src="js/view/PacmanView.js"></script>
     <script src="js/controller/GameCtrl.js"></script>
+    <script src="js/controller/PacmanCtrl.js"></script>
     <script src="js/index.js"></script>
 </body>
 
