--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/model/Layer.js"></script>
     <script src="js/model/Maze.js"></script>
     <script src="js/model/Game.js"></script>
+    <script src="js/model/Ghost.js"></script>
     <script src="js/view/GameView.js"></script>
     <script src="js/view/PacmanView.js"></script>
     <script src="js/controller/GameCtrl.js"></script>
